함수, 변수 명명 규칙 통일