@@ -14,7 +14,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 
 import org.junit.jupiter.api.Tag;
 import org.example.Data.MainData;
@@ -34,25 +34,21 @@ import com.amazonaws.services.s3.model.Owner;
 import com.amazonaws.services.s3.model.Permission;
 import com.amazonaws.services.s3.model.PutObjectRequest;
 
-public class Grants extends TestBase
-{
+public class Grants extends TestBase {
 	@org.junit.jupiter.api.BeforeAll
-	public static void beforeAll()
-	{
+	public static void beforeAll() {
 		System.out.println("Grants Start");
 	}
 
 	@org.junit.jupiter.api.AfterAll
-	public static void afterAll()
-	{
+	public static void afterAll() {
 		System.out.println("Grants End");
 	}
 
 	@Test
 	@Tag("Bucket")
-	// [bucket_acl : default] 권한을 설정하지 않고 생성한 버킷의 default acl정보가 올바른지 확인
-	public void test_bucket_acl_default()
-	{
+	// [bucketAcl : default] 권한을 설정하지 않고 생성한 버킷의 default acl정보가 올바른지 확인
+	public void testBucketAclDefault() {
 		var bucketName = getNewBucket();
 
 		var client = getClient();
@@ -63,7 +59,8 @@ public class Grants extends TestBase
 		var user = new CanonicalGrantee(userId);
 		user.setDisplayName(displayName);
 
-		if (!StringUtils.isBlank(config.url)) assertEquals(displayName, response.getOwner().getDisplayName());
+		if (!StringUtils.isBlank(config.url))
+			assertEquals(displayName, response.getOwner().getDisplayName());
 		assertEquals(userId, response.getOwner().getId());
 
 		var getGrants = response.getGrantsAsList();
@@ -74,9 +71,8 @@ public class Grants extends TestBase
 
 	@Test
 	@Tag("Bucket")
-	// [bucket_acl : public-read] 권한을 public-read로 생성한 버킷의 acl정보가 올바른지 확인
-	public void test_bucket_acl_canned_during_create()
-	{
+	// [bucketAcl : public-read] 권한을 public-read로 생성한 버킷의 acl정보가 올바른지 확인
+	public void testBucketAclCannedDuringCreate() {
 		var bucketName = getNewBucketName();
 
 		var client = getClient();
@@ -97,9 +93,9 @@ public class Grants extends TestBase
 
 	@Test
 	@Tag("Bucket")
-	// [bucket_acl : public-read => bucket_acl : private] 권한을 public-read로 생성한 버킷을 private로 변경할경우 올바르게 적용되는지 확인
-	public void test_bucket_acl_canned()
-	{
+	// [bucketAcl : public-read => bucketAcl : private] 권한을 public-read로 생성한 버킷을
+	// private로 변경할경우 올바르게 적용되는지 확인
+	public void testBucketAclCanned() {
 		var bucketName = getNewBucketName();
 
 		var client = getClient();
@@ -128,9 +124,8 @@ public class Grants extends TestBase
 
 	@Test
 	@Tag("Bucket")
-	// [bucket_acl : public-read-write] 권한을 public-read-write로 생성한 버킷의 acl정보가 올바른지 확인
-	public void test_bucket_acl_canned_publicreadwrite()
-	{
+	// [bucketAcl : public-read-write] 권한을 public-read-write로 생성한 버킷의 acl정보가 올바른지 확인
+	public void testBucketAclCannedPublicRW() {
 		var bucketName = getNewBucketName();
 
 		var client = getClient();
@@ -152,13 +147,14 @@ public class Grants extends TestBase
 
 	@Test
 	@Tag("Bucket")
-	// [bucket_acl : authenticated-read] 권한을 authenticated-read로 생성한 버킷의 acl정보가 올바른지 확인
-	public void test_bucket_acl_canned_authenticatedread()
-	{
+	// [bucketAcl : authenticated-read] 권한을 authenticated-read로 생성한 버킷의 acl정보가 올바른지
+	// 확인
+	public void testBucketAclCannedAuthenticatedRead() {
 		var bucketName = getNewBucketName();
 
 		var client = getClient();
-		client.createBucket(new CreateBucketRequest(bucketName).withCannedAcl(CannedAccessControlList.AuthenticatedRead));
+		client.createBucket(
+				new CreateBucketRequest(bucketName).withCannedAcl(CannedAccessControlList.AuthenticatedRead));
 		var response = client.getBucketAcl(bucketName);
 
 		var displayName = config.mainUser.displayName;
@@ -175,16 +171,14 @@ public class Grants extends TestBase
 
 	@Test
 	@Tag("Object")
-	// [object_acl : default] 권한을 설정하지 않고 생성한 오브젝트의 default acl정보가 올바른지 확인
-	public void test_object_acl_default()
-	{
+	// [objectAcl : default] 권한을 설정하지 않고 생성한 오브젝트의 default acl정보가 올바른지 확인
+	public void testObjectAclDefault() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 
 		var key = "foo";
 		client.putObject(bucketName, key, "bar");
 		var response = client.getObjectAcl(bucketName, key);
-
 
 		var displayName = config.mainUser.displayName;
 		var userId = config.mainUser.userId;
@@ -199,9 +193,8 @@ public class Grants extends TestBase
 
 	@Test
 	@Tag("Object")
-	// [object_acl : public-read] 권한을 public-read로 생성한 오브젝트의 acl정보가 올바른지 확인
-	public void test_object_acl_canned_during_create()
-	{
+	// [objectAcl : public-read] 권한을 public-read로 생성한 오브젝트의 acl정보가 올바른지 확인
+	public void testObjectAclCannedDuringCreate() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 
@@ -210,9 +203,9 @@ public class Grants extends TestBase
 		metadata.setContentLength(3);
 
 		var key = "foo";
-		client.putObject(new PutObjectRequest(bucketName, key, createBody("bar"), metadata).withCannedAcl(CannedAccessControlList.PublicRead));
+		client.putObject(new PutObjectRequest(bucketName, key, createBody("bar"), metadata)
+				.withCannedAcl(CannedAccessControlList.PublicRead));
 		var response = client.getObjectAcl(bucketName, key);
-
 
 		var displayName = config.mainUser.displayName;
 		var userId = config.mainUser.userId;
@@ -228,9 +221,9 @@ public class Grants extends TestBase
 
 	@Test
 	@Tag("Object")
-	// [object_acl : public-read => object_acl : private] 권한을 public-read로 생성한 오브젝트를 private로 변경할경우 올바르게 적용되는지 확인
-	public void test_object_acl_canned()
-	{
+	// [objectAcl : public-read => objectAcl : private] 권한을 public-read로 생성한 오브젝트를
+	// private로 변경할경우 올바르게 적용되는지 확인
+	public void testObjectAclCanned() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 
@@ -239,9 +232,9 @@ public class Grants extends TestBase
 		metadata.setContentLength(3);
 
 		var key = "foo";
-		client.putObject(new PutObjectRequest(bucketName, key, createBody("bar"), metadata).withCannedAcl(CannedAccessControlList.PublicRead));
+		client.putObject(new PutObjectRequest(bucketName, key, createBody("bar"), metadata)
+				.withCannedAcl(CannedAccessControlList.PublicRead));
 		var response = client.getObjectAcl(bucketName, key);
-
 
 		var displayName = config.mainUser.displayName;
 		var userId = config.mainUser.userId;
@@ -265,9 +258,9 @@ public class Grants extends TestBase
 
 	@Test
 	@Tag("Object")
-	// [object_acl : public-read-write] 권한을 public-read-write로 생성한 오브젝트의 acl정보가 올바른지 확인
-	public void test_object_acl_canned_publicreadwrite()
-	{
+	// [objectAcl : public-read-write] 권한을 public-read-write로 생성한 오브젝트의 acl정보가 올바른지
+	// 확인
+	public void testObjectAclCannedPublicRW() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 
@@ -276,9 +269,9 @@ public class Grants extends TestBase
 		metadata.setContentLength(3);
 
 		var key = "foo";
-		client.putObject(new PutObjectRequest(bucketName, key, createBody("bar"), metadata).withCannedAcl(CannedAccessControlList.PublicReadWrite));
+		client.putObject(new PutObjectRequest(bucketName, key, createBody("bar"), metadata)
+				.withCannedAcl(CannedAccessControlList.PublicReadWrite));
 		var response = client.getObjectAcl(bucketName, key);
-
 
 		var displayName = config.mainUser.displayName;
 		var userId = config.mainUser.userId;
@@ -295,9 +288,9 @@ public class Grants extends TestBase
 
 	@Test
 	@Tag("Object")
-	// [object_acl : authenticated-read] 권한을 authenticated-read로 생성한 오브젝트의 acl정보가 올바른지 확인
-	public void test_object_acl_canned_authenticatedread()
-	{
+	// [objectAcl : authenticated-read] 권한을 authenticated-read로 생성한 오브젝트의 acl정보가
+	// 올바른지 확인
+	public void testObjectAclCannedAuthenticatedRead() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 
@@ -306,9 +299,9 @@ public class Grants extends TestBase
 		metadata.setContentLength(3);
 
 		var key = "foo";
-		client.putObject(new PutObjectRequest(bucketName, key, createBody("bar"), metadata).withCannedAcl(CannedAccessControlList.AuthenticatedRead));
+		client.putObject(new PutObjectRequest(bucketName, key, createBody("bar"), metadata)
+				.withCannedAcl(CannedAccessControlList.AuthenticatedRead));
 		var response = client.getObjectAcl(bucketName, key);
-
 
 		var displayName = config.mainUser.displayName;
 		var userId = config.mainUser.userId;
@@ -324,10 +317,11 @@ public class Grants extends TestBase
 
 	@Test
 	@Tag("Object")
-	// [bucket_acl: public-read-write] [object_acl : public-read-write => object_acl : bucket-owner-read]" +
-	//"메인 유저가 권한을 public-read-write로 생성한 버켓에서 서브유저가 업로드한 오브젝트를 서브 유저가 권한을 bucket-owner-read로 변경하였을때 올바르게 적용되는지 확인
-	public void test_object_acl_canned_bucketownerread()
-	{
+	// [bucketAcl: public-read-write] [objectAcl : public-read-write => objectAcl :
+	// bucket-owner-read]" +
+	// "메인 유저가 권한을 public-read-write로 생성한 버켓에서 서브유저가 업로드한 오브젝트를 서브 유저가 권한을
+	// bucket-owner-read로 변경하였을때 올바르게 적용되는지 확인
+	public void testObjectAclCannedBucketOwnerRead() {
 		var bucketName = getNewBucketName();
 		var mainClient = getClient();
 		var altClient = getAltClient();
@@ -337,7 +331,8 @@ public class Grants extends TestBase
 		metadata.setContentType("text/plain");
 		metadata.setContentLength(3);
 
-		mainClient.createBucket(new CreateBucketRequest(bucketName).withCannedAcl(CannedAccessControlList.PublicReadWrite));
+		mainClient.createBucket(
+				new CreateBucketRequest(bucketName).withCannedAcl(CannedAccessControlList.PublicReadWrite));
 		altClient.putObject(bucketName, key, "bar");
 
 		var bucketACLResponse = mainClient.getBucketAcl(bucketName);
@@ -346,7 +341,8 @@ public class Grants extends TestBase
 		var owner = new CanonicalGrantee(bucketOwnerId);
 		owner.setDisplayName(bucketOwnerDisplayName);
 
-		altClient.putObject(new PutObjectRequest(bucketName, key, createBody(key), metadata).withCannedAcl(CannedAccessControlList.BucketOwnerRead));
+		altClient.putObject(new PutObjectRequest(bucketName, key, createBody(key), metadata)
+				.withCannedAcl(CannedAccessControlList.BucketOwnerRead));
 		var response = altClient.getObjectAcl(bucketName, key);
 
 		var altDisplayName = config.altUser.displayName;
@@ -363,10 +359,11 @@ public class Grants extends TestBase
 
 	@Test
 	@Tag("Object")
-	// [bucket_acl: public-read-write] [object_acl : public-read-write => object_acl : bucket-owner-full-control] " +
-	//"메인 유저가 권한을 public-read-write로 생성한 버켓에서 서브유저가 업로드한 오브젝트를 서브 유저가 권한을 bucket-owner-full-control로 변경하였을때 올바르게 적용되는지 확인
-	public void test_object_acl_canned_bucketownerfullcontrol()
-	{
+	// [bucketAcl: public-read-write] [objectAcl : public-read-write => objectAcl :
+	// bucket-owner-full-control] " +
+	// "메인 유저가 권한을 public-read-write로 생성한 버켓에서 서브유저가 업로드한 오브젝트를 서브 유저가 권한을
+	// bucket-owner-full-control로 변경하였을때 올바르게 적용되는지 확인
+	public void testObjectAclCannedBucketOwnerFullControl() {
 		var bucketName = getNewBucketName();
 		var mainClient = getClient();
 		var altClient = getAltClient();
@@ -376,7 +373,8 @@ public class Grants extends TestBase
 		metadata.setContentType("text/plain");
 		metadata.setContentLength(3);
 
-		mainClient.createBucket(new CreateBucketRequest(bucketName).withCannedAcl(CannedAccessControlList.PublicReadWrite));
+		mainClient.createBucket(
+				new CreateBucketRequest(bucketName).withCannedAcl(CannedAccessControlList.PublicReadWrite));
 		altClient.putObject(bucketName, key, "bar");
 
 		var bucketACLResponse = mainClient.getBucketAcl(bucketName);
@@ -385,7 +383,8 @@ public class Grants extends TestBase
 		var owner = new CanonicalGrantee(bucketOwnerId);
 		owner.setDisplayName(bucketOwnerDisplayName);
 
-		altClient.putObject(new PutObjectRequest(bucketName, key, createBody(key), metadata).withCannedAcl(CannedAccessControlList.BucketOwnerFullControl));
+		altClient.putObject(new PutObjectRequest(bucketName, key, createBody(key), metadata)
+				.withCannedAcl(CannedAccessControlList.BucketOwnerFullControl));
 		var response = altClient.getObjectAcl(bucketName, key);
 
 		var altDisplayName = config.altUser.displayName;
@@ -402,16 +401,18 @@ public class Grants extends TestBase
 
 	@Test
 	@Tag("Object")
-	// [bucket_acl: public-read-write] " +
-	//"메인 유저가 권한을 public-read-write로 생성한 버켓에서 메인유저가 생성한 오브젝트의 권한을 서브유저에게 FULL_CONTROL, 소유주를 메인유저로 설정한뒤 서브 유저가 권한을 READ_ACP, 소유주를 메인유저로 설정하였을때 오브젝트의 소유자가 유지되는지 확인
-	public void test_object_acl_full_control_verify_owner()
-	{
+	// [bucketAcl: public-read-write] " +
+	// "메인 유저가 권한을 public-read-write로 생성한 버켓에서 메인유저가 생성한 오브젝트의 권한을 서브유저에게
+	// FULL_CONTROL, 소유주를 메인유저로 설정한뒤 서브 유저가 권한을 READ_ACP, 소유주를 메인유저로 설정하였을때 오브젝트의
+	// 소유자가 유지되는지 확인
+	public void testObjectAclFullControlVerifyOwner() {
 		var bucketName = getNewBucketName();
 		var mainClient = getClient();
 		var altClient = getAltClient();
 		var key = "foo";
 
-		mainClient.createBucket(new CreateBucketRequest(bucketName).withCannedAcl(CannedAccessControlList.PublicReadWrite));
+		mainClient.createBucket(
+				new CreateBucketRequest(bucketName).withCannedAcl(CannedAccessControlList.PublicReadWrite));
 		mainClient.putObject(bucketName, key, "bar");
 
 		var mainUserId = config.mainUser.userId;
@@ -423,7 +424,6 @@ public class Grants extends TestBase
 		var altDisplayName = config.altUser.displayName;
 		var altUser = new CanonicalGrantee(altUserId);
 		altUser.setDisplayName(altDisplayName);
-
 
 		var accessControlList = new AccessControlList();
 		accessControlList.setOwner(new Owner(mainUserId, mainDisplayName));
@@ -442,14 +442,14 @@ public class Grants extends TestBase
 
 	@Test
 	@Tag("ETag")
-	// [bucket_acl: public-read-write] 권한정보를 추가한 오브젝트의 eTag값이 변경되지 않는지 확인
-	public void test_object_acl_full_control_verify_attributes()
-	{
+	// [bucketAcl: public-read-write] 권한정보를 추가한 오브젝트의 eTag값이 변경되지 않는지 확인
+	public void testObjectAclFullControlVerifyAttributes() {
 		var bucketName = getNewBucketName();
 		var mainClient = getClient();
 		var key = "foo";
 
-		mainClient.createBucket(new CreateBucketRequest(bucketName).withCannedAcl(CannedAccessControlList.PublicReadWrite));
+		mainClient.createBucket(
+				new CreateBucketRequest(bucketName).withCannedAcl(CannedAccessControlList.PublicReadWrite));
 
 		var headers = new ObjectMetadata();
 		headers.addUserMetadata("x-amz-meta-foo", "bar");
@@ -478,9 +478,8 @@ public class Grants extends TestBase
 
 	@Test
 	@Tag("Permission")
-	// [bucket_acl:private] 기본생성한 버킷에 priavte 설정이 가능한지 확인
-	public void test_bucket_acl_canned_private_to_private()
-	{
+	// [bucketAcl:private] 기본생성한 버킷에 private 설정이 가능한지 확인
+	public void testBucketAclCannedPrivateToPrivate() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 
@@ -490,48 +489,42 @@ public class Grants extends TestBase
 	@Test
 	@Tag("Permission")
 	// 오브젝트에 설정한 acl정보가 올바르게 적용되었는지 확인 : FULL_CONTROL
-	public void test_object_acl()
-	{
+	public void testObjectAcl() {
 		checkObjectACL(Permission.FullControl);
 	}
 
 	@Test
 	@Tag("Permission")
 	// 오브젝트에 설정한 acl정보가 올바르게 적용되었는지 확인 : WRITE
-	public void test_object_acl_write()
-	{
+	public void testObjectAclWrite() {
 		checkObjectACL(Permission.Write);
 	}
 
 	@Test
 	@Tag("Permission")
 	// 오브젝트에 설정한 acl정보가 올바르게 적용되었는지 확인 : WRITE_ACP
-	public void test_object_acl_writeacp()
-	{
+	public void testObjectAclWriteAcp() {
 		checkObjectACL(Permission.WriteAcp);
 	}
 
 	@Test
 	@Tag("Permission")
 	// 오브젝트에 설정한 acl정보가 올바르게 적용되었는지 확인 : READ
-	public void test_object_acl_read()
-	{
+	public void testObjectAclRead() {
 		checkObjectACL(Permission.Read);
 	}
 
 	@Test
 	@Tag("Permission")
 	// 오브젝트에 설정한 acl정보가 올바르게 적용되었는지 확인 : READ_ACP
-	public void test_object_acl_readacp()
-	{
+	public void testObjectAclReadAcp() {
 		checkObjectACL(Permission.ReadAcp);
 	}
 
 	@Test
 	@Tag("Permission")
 	// 메인 유저가 버킷에 설정한 acl정보대로 서브유저가 해당 버킷에 접근 가능한지 확인 : FULL_CONTROL
-	public void test_bucket_acl_grant_userid_fullcontrol()
-	{
+	public void testBucketAclGrantUserFullControl() {
 		var bucketName = bucketACLGrantUserId(Permission.FullControl);
 
 		checkBucketACLGrantCanRead(bucketName);
@@ -549,14 +542,14 @@ public class Grants extends TestBase
 		var mainDisplayName = config.mainUser.displayName;
 
 		assertEquals(mainUserId, ownerId);
-		if (!StringUtils.isBlank(config.url)) assertEquals(mainDisplayName, ownerDisplayName);
+		if (!StringUtils.isBlank(config.url))
+			assertEquals(mainDisplayName, ownerDisplayName);
 	}
 
 	@Test
 	@Tag("Permission")
 	// 메인 유저가 버킷에 설정한 acl정보대로 서브유저가 해당 버킷에 접근 가능한지 확인 : READ
-	public void test_bucket_acl_grant_userid_read()
-	{
+	public void testBucketAclGrantUserRead() {
 		var bucketName = bucketACLGrantUserId(Permission.Read);
 
 		checkBucketACLGrantCanRead(bucketName);
@@ -568,8 +561,7 @@ public class Grants extends TestBase
 	@Test
 	@Tag("Permission")
 	// 메인 유저가 버킷에 설정한 acl정보대로 서브유저가 해당 버킷에 접근 가능한지 확인 : READ_ACP
-	public void test_bucket_acl_grant_userid_readacp()
-	{
+	public void testBucketAclGrantUserReadAcp() {
 		var bucketName = bucketACLGrantUserId(Permission.ReadAcp);
 
 		checkBucketACLGrantCantRead(bucketName);
@@ -581,8 +573,7 @@ public class Grants extends TestBase
 	@Test
 	@Tag("Permission")
 	// 메인 유저가 버킷에 설정한 acl정보대로 서브유저가 해당 버킷에 접근 가능한지 확인 : WRITE
-	public void test_bucket_acl_grant_userid_write()
-	{
+	public void testBucketAclGrantUserWrite() {
 		var bucketName = bucketACLGrantUserId(Permission.Write);
 
 		checkBucketACLGrantCantRead(bucketName);
@@ -594,8 +585,7 @@ public class Grants extends TestBase
 	@Test
 	@Tag("Permission")
 	// 메인 유저가 버킷에 설정한 acl정보대로 서브유저가 해당 버킷에 접근 가능한지 확인 : WRITE_ACP
-	public void test_bucket_acl_grant_userid_writeacp()
-	{
+	public void testBucketAclGrantUserWriteAcp() {
 		var bucketName = bucketACLGrantUserId(Permission.WriteAcp);
 
 		checkBucketACLGrantCantRead(bucketName);
@@ -607,12 +597,11 @@ public class Grants extends TestBase
 	@Test
 	@Tag("ERROR")
 	// 버킷에 존재하지 않는 유저를 추가하려고 하면 에러 발생 확인
-	public void test_bucket_acl_grant_nonexist_user()
-	{
+	public void testBucketAclGrantNonExistUser() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 
-		var badUser = new CanonicalGrantee("_foo");
+		var badUser = new CanonicalGrantee("Foo");
 		var accessControlList = addBucketUserGrant(bucketName, new Grant(badUser, Permission.FullControl));
 
 		var e = assertThrows(AmazonServiceException.class, () -> client.setBucketAcl(bucketName, accessControlList));
@@ -625,8 +614,7 @@ public class Grants extends TestBase
 	@Test
 	@Tag("ERROR")
 	// 버킷에 권한정보를 모두 제거했을때 오브젝트를 업데이트 하면 실패 확인
-	public void test_bucket_acl_no_grants()
-	{
+	public void testBucketAclNoGrants() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 		var key = "foo";
@@ -647,18 +635,18 @@ public class Grants extends TestBase
 		client2.getBucketAcl(bucketName);
 		client2.setBucketAcl(bucketName, CannedAccessControlList.Private);
 
-		for(var MyGrant : oldGrants) policy.grantAllPermissions(MyGrant);
+		for (var MyGrant : oldGrants)
+			policy.grantAllPermissions(MyGrant);
 		client2.setBucketAcl(bucketName, policy);
 	}
 
 	@Test
 	@Tag("Header")
 	// 오브젝트를 생성하면서 권한정보를 여러개보낼때 모두 올바르게 적용되었는지 확인
-	public void test_object_header_acl_grants()
-	{
+	public void testObjectHeaderAclGrants() {
 		var bucketName = getNewBucket();
 		var client = getClient();
-		var key = "foo_key";
+		var key = "fooKey";
 
 		var metadata = new ObjectMetadata();
 		metadata.setContentType("text/plain");
@@ -669,7 +657,8 @@ public class Grants extends TestBase
 
 		var grants = getGrantList(null, null);
 
-		client.putObject(new PutObjectRequest(bucketName, key, createBody("bar"), metadata).withAccessControlList(grants));
+		client.putObject(
+				new PutObjectRequest(bucketName, key, createBody("bar"), metadata).withAccessControlList(grants));
 		var response = client.getObjectAcl(bucketName, key);
 
 		var getGrants = response.getGrantsAsList();
@@ -685,8 +674,7 @@ public class Grants extends TestBase
 	@Test
 	@Tag("Header")
 	// 버킷 생성하면서 권한정보를 여러개 보낼때 모두 올바르게 적용되었는지 확인
-	public void test_bucket_header_acl_grants()
-	{
+	public void testBucketHeaderAclGrants() {
 		var bucketName = getNewBucketName();
 		var client = getClient();
 
@@ -711,8 +699,7 @@ public class Grants extends TestBase
 	@Test
 	@Tag("Delete")
 	// 버킷의 acl 설정이 누락될 경우 실패함을 확인
-	public void test_bucket_acl_revoke_all()
-	{
+	public void testBucketAclRevokeAll() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 
@@ -721,7 +708,8 @@ public class Grants extends TestBase
 
 		var acl1 = new AccessControlList();
 		acl1.setOwner(new Owner());
-		for (var Item : response.getGrantsAsList()) acl1.grantAllPermissions(Item);
+		for (var Item : response.getGrantsAsList())
+			acl1.grantAllPermissions(Item);
 
 		assertThrows(AmazonServiceException.class, () -> client.setBucketAcl(bucketName, acl1));
 
@@ -739,8 +727,7 @@ public class Grants extends TestBase
 	@Test
 	@Tag("Delete")
 	// 오브젝트의 acl 설정이 누락될 경우 실패함을 확인
-	public void test_object_acl_revoke_all()
-	{
+	public void testObjectAclRevokeAll() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 		var key = "foo";
@@ -751,13 +738,14 @@ public class Grants extends TestBase
 
 		var acl1 = new AccessControlList();
 		acl1.setOwner(new Owner());
-		for (var Item : response.getGrantsAsList()) acl1.grantAllPermissions(Item);
+		for (var Item : response.getGrantsAsList())
+			acl1.grantAllPermissions(Item);
 
 		assertThrows(AmazonServiceException.class, () -> client.setObjectAcl(bucketName, key, acl1));
 
 		var acl2 = new AccessControlList();
 		acl2.setOwner(response.getOwner());
-		
+
 		client.setObjectAcl(bucketName, key, acl2);
 
 		var acl3 = new AccessControlList();
@@ -768,9 +756,9 @@ public class Grants extends TestBase
 
 	@Test
 	@Tag("Access")
-	// [bucket_acl:private, object_acl:private] 메인유저가 pirvate권한으로 생성한 버킷과 오브젝트를 서브유저가 오브젝트 목록을 보거나 다운로드 할 수 없음을 확인
-	public void test_access_bucket_private_object_private()
-	{
+	// [bucketAcl:private, objectAcl:private] 메인유저가 private권한으로 생성한 버킷과 오브젝트를 서브유저가
+	// 오브젝트 목록을 보거나 다운로드 할 수 없음을 확인
+	public void testAccessBucketPrivateObjectPrivate() {
 		var key1 = "foo";
 		var key2 = "bar";
 		var newKey = "new";
@@ -790,9 +778,9 @@ public class Grants extends TestBase
 
 	@Test
 	@Tag("Access")
-	// [bucket_acl:private, object_acl:private] 메인유저가 pirvate권한으로 생성한 버킷과 오브젝트를 서브유저가 오브젝트 목록을 보거나 다운로드 할 수 없음을 확인(ListObjects_v2)
-	public void test_access_bucket_private_objectv2_private()
-	{
+	// [bucketAcl:private, objectAcl:private] 메인유저가 private권한으로 생성한 버킷과 오브젝트를 서브유저가
+	// 오브젝트 목록을 보거나 다운로드 할 수 없음을 확인(ListObjectsV2)
+	public void testAccessBucketPrivateObjectV2Private() {
 		var key1 = "foo";
 		var key2 = "bar";
 		var newKey = "new";
@@ -811,15 +799,17 @@ public class Grants extends TestBase
 		assertThrows(AmazonServiceException.class, () -> altClient2.putObject(bucketName, newKey, "newcontent"));
 	}
 
+	@SuppressWarnings("resource")
 	@Test
 	@Tag("Access")
-	// [bucket_acl:private, object_acl:private, public-read] 메인유저가 pirvate권한으로 생성한 버킷과 오브젝트는 서브유저가 목록을 보거나 다운로드할 수 없지만 public-read로 설정한 오브젝트는 다운로드 할 수 있음을 확인
-	public void test_access_bucket_private_object_publicread()
-	{
+	// [bucketAcl:private, objectAcl:private, public-read] 메인유저가 private권한으로 생성한 버킷과
+	// 오브젝트는 서브유저가 목록을 보거나 다운로드할 수 없지만 public-read로 설정한 오브젝트는 다운로드 할 수 있음을 확인
+	public void testAccessBucketPrivateObjectPublicRead() {
 		var key1 = "foo";
 		var key2 = "bar";
 		var newKey = "new";
-		var bucketName = setupAccessTest(key1, key2, CannedAccessControlList.Private, CannedAccessControlList.PublicRead);
+		var bucketName = setupAccessTest(key1, key2, CannedAccessControlList.Private,
+				CannedAccessControlList.PublicRead);
 		var altClient = getAltClient();
 		var response = altClient.getObject(bucketName, key1);
 
@@ -837,15 +827,77 @@ public class Grants extends TestBase
 		assertThrows(AmazonServiceException.class, () -> altClient3.putObject(bucketName, newKey, "newcontent"));
 	}
 
+	@SuppressWarnings("resource")
 	@Test
 	@Tag("Access")
-	// [bucket_acl:private, object_acl:private, public-read] 메인유저가 pirvate권한으로 생성한 버킷과 오브젝트는 서브유저가 목록을 보거나 다운로드할 수 없지만 public-read로 설정한 오브젝트는 다운로드 할 수 있음을 확인(ListObjects_v2)
-	public void test_access_bucket_private_objectv2_publicread()
-	{
+	// [bucketAcl:private, objectAcl:private, public-read] 메인유저가 private권한으로 생성한 버킷과
+	// 오브젝트는 서브유저가 목록을 보거나 다운로드할 수 없지만 public-read로 설정한 오브젝트는 다운로드 할 수 있음을
+	// 확인(ListObjectsV2)
+	public void testAccessBucketPrivateObjectV2PublicRead() {
 		var key1 = "foo";
 		var key2 = "bar";
 		var newKey = "new";
-		var bucketName = setupAccessTest(key1, key2, CannedAccessControlList.Private, CannedAccessControlList.PublicRead);
+		var bucketName = setupAccessTest(key1, key2, CannedAccessControlList.Private,
+				CannedAccessControlList.PublicRead);
+		var altClient = getAltClient();
+		var response = altClient.getObject(bucketName, key1);
+
+		var body = getBody(response.getObjectContent());
+		assertEquals(key1, body);
+
+		assertThrows(AmazonServiceException.class, () -> altClient.putObject(bucketName, key1, "foooverwrite"));
+
+		var altClient2 = getAltClient();
+		assertThrows(AmazonServiceException.class, () -> altClient2.getObject(bucketName, key2));
+		assertThrows(AmazonServiceException.class, () -> altClient2.putObject(bucketName, key2, "baroverwrite"));
+
+		var altClient3 = getAltClient();
+		assertThrows(AmazonServiceException.class, () -> altClient3.listObjectsV2(bucketName));
+		assertThrows(AmazonServiceException.class, () -> altClient3.putObject(bucketName, newKey, "newcontent"));
+	}
+
+	@SuppressWarnings("resource")
+	@Test
+	@Tag("Access")
+	// [bucketAcl:private, objectAcl:private, public-read-write] 메인유저가 private권한으로
+	// 생성한 버킷과 오브젝트는 서브유저가 목록을 보거나 다운로드할 수 없지만 public-read-write로 설정한 오브젝트는 다운로드만 할
+	// 수 있음을 확인 (버킷의 권한이 private이기 때문에 오브젝트의 권한이 public-read-write로 설정되어있어도 업로드불가)
+	public void testAccessBucketPrivateObjectPublicRW() {
+		var key1 = "foo";
+		var key2 = "bar";
+		var newKey = "new";
+		var bucketName = setupAccessTest(key1, key2, CannedAccessControlList.Private,
+				CannedAccessControlList.PublicReadWrite);
+		var altClient = getAltClient();
+		var response = altClient.getObject(bucketName, key1);
+
+		var body = getBody(response.getObjectContent());
+		assertEquals(key1, body);
+
+		assertThrows(AmazonServiceException.class, () -> altClient.putObject(bucketName, key1, "foooverwrite"));
+
+		var altClient2 = getAltClient();
+		assertThrows(AmazonServiceException.class, () -> altClient2.getObject(bucketName, key2));
+		assertThrows(AmazonServiceException.class, () -> altClient2.putObject(bucketName, key2, "baroverwrite"));
+
+		var altClient3 = getAltClient();
+		assertThrows(AmazonServiceException.class, () -> altClient3.listObjects(bucketName));
+		assertThrows(AmazonServiceException.class, () -> altClient3.putObject(bucketName, newKey, "newcontent"));
+	}
+
+	@SuppressWarnings("resource")
+	@Test
+	@Tag("Access")
+	// [bucketAcl:private, objectAcl:private, public-read-write] 메인유저가 private권한으로
+	// 생성한 버킷과 오브젝트는 서브유저가 목록을 보거나 다운로드할 수 없지만 public-read-write로 설정한 오브젝트는 다운로드만 할
+	// 수 있음을 확인(ListObjectsV2) (버킷의 권한이 private이기 때문에 오브젝트의 권한이 public-read-write로
+	// 설정되어있어도 업로드불가)
+	public void testAccessBucketPrivateObjectV2PublicRW() {
+		var key1 = "foo";
+		var key2 = "bar";
+		var newKey = "new";
+		var bucketName = setupAccessTest(key1, key2, CannedAccessControlList.Private,
+				CannedAccessControlList.PublicReadWrite);
 		var altClient = getAltClient();
 		var response = altClient.getObject(bucketName, key1);
 
@@ -865,65 +917,14 @@ public class Grants extends TestBase
 
 	@Test
 	@Tag("Access")
-	// [bucket_acl:private, object_acl:private, public-read-write] 메인유저가 pirvate권한으로 생성한 버킷과 오브젝트는 서브유저가 목록을 보거나 다운로드할 수 없지만 public-read-write로 설정한 오브젝트는 다운로드만 할 수 있음을 확인 (버킷의 권한이 private이기 때문에 오브젝트의 권한이 public-read-write로 설정되어있어도 업로드불가)
-	public void test_access_bucket_private_object_publicreadwrite()
-	{
+	// [bucketAcl:public-read, objectAcl:private] 메인유저가 public-read권한으로 생성한 버킷에서
+	// private권한으로 생성한 오브젝트에 대해 서브유저는 오브젝트 목록만 볼 수 있음을 확인
+	public void testAccessBucketPublicReadObjectPrivate() {
 		var key1 = "foo";
 		var key2 = "bar";
 		var newKey = "new";
-		var bucketName = setupAccessTest(key1, key2, CannedAccessControlList.Private, CannedAccessControlList.PublicReadWrite);
-		var altClient = getAltClient();
-		var response = altClient.getObject(bucketName, key1);
-
-		var body = getBody(response.getObjectContent());
-		assertEquals(key1, body);
-
-		assertThrows(AmazonServiceException.class, () -> altClient.putObject(bucketName, key1, "foooverwrite"));
-
-		var altClient2 = getAltClient();
-		assertThrows(AmazonServiceException.class, () -> altClient2.getObject(bucketName, key2));
-		assertThrows(AmazonServiceException.class, () -> altClient2.putObject(bucketName, key2, "baroverwrite"));
-
-		var altClient3 = getAltClient();
-		assertThrows(AmazonServiceException.class, () -> altClient3.listObjects(bucketName));
-		assertThrows(AmazonServiceException.class, () -> altClient3.putObject(bucketName, newKey, "newcontent"));
-	}
-
-	@Test
-	@Tag("Access")
-	// [bucket_acl:private, object_acl:private, public-read-write] 메인유저가 pirvate권한으로 생성한 버킷과 오브젝트는 서브유저가 목록을 보거나 다운로드할 수 없지만 public-read-write로 설정한 오브젝트는 다운로드만 할 수 있음을 확인(ListObjects_v2) (버킷의 권한이 private이기 때문에 오브젝트의 권한이 public-read-write로 설정되어있어도 업로드불가)
-	public void test_access_bucket_private_objectv2_publicreadwrite()
-	{
-		var key1 = "foo";
-		var key2 = "bar";
-		var newKey = "new";
-		var bucketName = setupAccessTest(key1, key2, CannedAccessControlList.Private, CannedAccessControlList.PublicReadWrite);
-		var altClient = getAltClient();
-		var response = altClient.getObject(bucketName, key1);
-
-		var body = getBody(response.getObjectContent());
-		assertEquals(key1, body);
-
-		assertThrows(AmazonServiceException.class, () -> altClient.putObject(bucketName, key1, "foooverwrite"));
-
-		var altClient2 = getAltClient();
-		assertThrows(AmazonServiceException.class, () -> altClient2.getObject(bucketName, key2));
-		assertThrows(AmazonServiceException.class, () -> altClient2.putObject(bucketName, key2, "baroverwrite"));
-
-		var altClient3 = getAltClient();
-		assertThrows(AmazonServiceException.class, () -> altClient3.listObjectsV2(bucketName));
-		assertThrows(AmazonServiceException.class, () -> altClient3.putObject(bucketName, newKey, "newcontent"));
-	}
-
-	@Test
-	@Tag("Access")
-	// [bucket_acl:public-read, object_acl:private] 메인유저가 public-read권한으로 생성한 버킷에서 private권한으로 생성한 오브젝트에 대해 서브유저는 오브젝트 목록만 볼 수 있음을 확인
-	public void test_access_bucket_publicread_object_private()
-	{
-		var key1 = "foo";
-		var key2 = "bar";
-		var newKey = "new";
-		var bucketName = setupAccessTest(key1, key2, CannedAccessControlList.PublicRead, CannedAccessControlList.Private);
+		var bucketName = setupAccessTest(key1, key2, CannedAccessControlList.PublicRead,
+				CannedAccessControlList.Private);
 		var altClient = getAltClient();
 
 		assertThrows(AmazonServiceException.class, () -> altClient.getObject(bucketName, key1));
@@ -935,19 +936,21 @@ public class Grants extends TestBase
 
 		var altClient3 = getAltClient();
 		var objList = getKeys(altClient3.listObjects(bucketName).getObjectSummaries());
-		assertEquals(new ArrayList<>(Arrays.asList(new String[] { key2, key1 })), objList);
+		assertEquals(List.of(key2, key1), objList);
 		assertThrows(AmazonServiceException.class, () -> altClient3.putObject(bucketName, newKey, "newcontent"));
 	}
 
+	@SuppressWarnings("resource")
 	@Test
 	@Tag("Access")
-	// [bucket_acl:public-read, object_acl:public-read, private] 메인유저가 public-read권한으로 생성한 버킷에서 public-read권한으로 생성한 오브젝트에 대해 서브유저는 오브젝트 목록을 보거나 다운로드 할 수 있음을 확인
-	public void test_access_bucket_publicread_object_publicread()
-	{
+	// [bucketAcl:public-read, objectAcl:public-read, private] 메인유저가 public-read권한으로
+	// 생성한 버킷에서 public-read권한으로 생성한 오브젝트에 대해 서브유저는 오브젝트 목록을 보거나 다운로드 할 수 있음을 확인
+	public void testAccessBucketPublicReadObjectPublicRead() {
 		var key1 = "foo";
 		var key2 = "bar";
 		var newKey = "new";
-		var bucketName = setupAccessTest(key1, key2, CannedAccessControlList.PublicRead, CannedAccessControlList.PublicRead);
+		var bucketName = setupAccessTest(key1, key2, CannedAccessControlList.PublicRead,
+				CannedAccessControlList.PublicRead);
 		var altClient = getAltClient();
 
 		var response = altClient.getObject(bucketName, key1);
@@ -962,19 +965,23 @@ public class Grants extends TestBase
 
 		var altClient3 = getAltClient();
 		var objList = getKeys(altClient3.listObjects(bucketName).getObjectSummaries());
-		assertEquals(new ArrayList<>(Arrays.asList(new String[] { key2, key1 })), objList);
+		assertEquals(List.of(key2, key1), objList);
 		assertThrows(AmazonServiceException.class, () -> altClient3.putObject(bucketName, newKey, "newcontent"));
 	}
 
+	@SuppressWarnings("resource")
 	@Test
 	@Tag("Access")
-	// [bucket_acl:public-read, object_acl:public-read-wirte, private] 메인유저가 public-read권한으로 생성한 버킷에서 public-read-write권한으로 생성한 오브젝트에 대해 서브유저는 오브젝트 목록을 보거나 다운로드 할 수 있음을 확인 (버킷의 권한이 public-read이기 때문에 오브젝트의 권한이 public-read-write로 설정되어있어도 수정불가)
-	public void test_access_bucket_publicread_object_publicreadwrite()
-	{
+	// [bucketAcl:public-read, objectAcl:public-read-write, private] 메인유저가
+	// public-read권한으로 생성한 버킷에서 public-read-write권한으로 생성한 오브젝트에 대해 서브유저는 오브젝트 목록을
+	// 보거나 다운로드 할 수 있음을 확인 (버킷의 권한이 public-read이기 때문에 오브젝트의 권한이 public-read-write로
+	// 설정되어있어도 수정불가)
+	public void testAccessBucketPublicReadObjectPublicRW() {
 		var key1 = "foo";
 		var key2 = "bar";
 		var newKey = "new";
-		var bucketName = setupAccessTest(key1, key2, CannedAccessControlList.PublicRead, CannedAccessControlList.PublicReadWrite);
+		var bucketName = setupAccessTest(key1, key2, CannedAccessControlList.PublicRead,
+				CannedAccessControlList.PublicReadWrite);
 		var altClient = getAltClient();
 
 		var response = altClient.getObject(bucketName, key1);
@@ -989,22 +996,22 @@ public class Grants extends TestBase
 
 		var altClient3 = getAltClient();
 		var objList = getKeys(altClient3.listObjects(bucketName).getObjectSummaries());
-		assertEquals(new ArrayList<>(Arrays.asList(new String[] { key2, key1 })), objList);
+		assertEquals(List.of(key2, key1), objList);
 		assertThrows(AmazonServiceException.class, () -> altClient3.putObject(bucketName, newKey, "newcontent"));
 	}
 
 	@Test
 	@Tag("Access")
-	// [bucket_acl:public-read-write, object_acl:private] 메인유저가 public-read-write권한으로 생성한 버킷에서
+	// [bucketAcl:public-read-write, objectAcl:private] 메인유저가 public-read-write권한으로
+	// 생성한 버킷에서
 	// private권한으로 생성한 오브젝트에 대해 서브유저는 오브젝트 목록 조회는 가능하나 다운로드 할 수 없음을 확인
-	public void test_access_bucket_publicreadwrite_object_private()
-	{
+	public void testAccessBucketPublicRWObjectPrivate() {
 		var key1 = "foo";
 		var key2 = "bar";
 		var newKey = "new";
-		var bucketName = setupAccessTest(key1, key2, CannedAccessControlList.PublicReadWrite, CannedAccessControlList.Private);
+		var bucketName = setupAccessTest(key1, key2, CannedAccessControlList.PublicReadWrite,
+				CannedAccessControlList.Private);
 		var altClient = getAltClient();
-
 
 		assertThrows(AmazonServiceException.class, () -> altClient.getObject(bucketName, key1));
 		assertThrows(AmazonServiceException.class, () -> altClient.putObject(bucketName, key1, "foooverwrite"));
@@ -1013,20 +1020,22 @@ public class Grants extends TestBase
 		assertThrows(AmazonServiceException.class, () -> altClient.putObject(bucketName, key2, "baroverwrite"));
 
 		var objList = getKeys(altClient.listObjects(bucketName).getObjectSummaries());
-		assertEquals(new ArrayList<>(Arrays.asList(new String[] { key2, key1 })), objList);
+		assertEquals(List.of(key2, key1), objList);
 		altClient.putObject(bucketName, newKey, "newcontent");
 	}
 
+	@SuppressWarnings("resource")
 	@Test
 	@Tag("Access")
-	// [bucket_acl:public-read-write, object_acl:public-read, private] 메인유저가 public-read-write권한으로 생성한 버킷에서
+	// [bucketAcl:public-read-write, objectAcl:public-read, private] 메인유저가
+	// public-read-write권한으로 생성한 버킷에서
 	// public-read권한으로 생성한 오브젝트에 대해 서브유저는 오브젝트 목록 조회, 다운로드 가능함을 확인
-	public void test_access_bucket_publicreadwrite_object_publicread()
-	{
+	public void testAccessBucketPublicRWObjectPublicRead() {
 		var key1 = "foo";
 		var key2 = "bar";
 		var newKey = "new";
-		var bucketName = setupAccessTest(key1, key2, CannedAccessControlList.PublicReadWrite, CannedAccessControlList.PublicRead);
+		var bucketName = setupAccessTest(key1, key2, CannedAccessControlList.PublicReadWrite,
+				CannedAccessControlList.PublicRead);
 		var altClient = getAltClient();
 
 		var response = altClient.getObject(bucketName, key1);
@@ -1038,21 +1047,23 @@ public class Grants extends TestBase
 		assertThrows(AmazonServiceException.class, () -> altClient.putObject(bucketName, key2, "baroverwrite"));
 
 		var objects = getKeys(altClient.listObjects(bucketName).getObjectSummaries());
-		assertEquals(new ArrayList<>(Arrays.asList(new String[] { key2, key1 })), objects);
+		assertEquals(List.of(key2, key1), objects);
 		altClient.putObject(bucketName, newKey, "newcontent");
 	}
 
+	@SuppressWarnings("resource")
 	@Test
 	@Ignore
 	@Tag("Access")
-	// [bucket_acl:public-read-write, object_acl:public-read-write, private] 메인유저가 public-read-write권한으로 생성한 버킷에서
+	// [bucketAcl:public-read-write, objectAcl:public-read-write, private] 메인유저가
+	// public-read-write권한으로 생성한 버킷에서
 	// public-read-write권한으로 생성한 오브젝트에 대해 서브유저는 오브젝트 목록을 읽거나 다운로드 가능함을 확인
-	public void test_access_bucket_publicreadwrite_object_publicreadwrite()
-	{
+	public void testAccessBucketPublicRWObjectPublicRW() {
 		var key1 = "foo";
 		var key2 = "bar";
 		var newKey = "new";
-		var bucketName = setupAccessTest(key1, key2, CannedAccessControlList.PublicReadWrite, CannedAccessControlList.PublicReadWrite);
+		var bucketName = setupAccessTest(key1, key2, CannedAccessControlList.PublicReadWrite,
+				CannedAccessControlList.PublicReadWrite);
 		var altClient = getAltClient();
 
 		var response = altClient.getObject(bucketName, key1);
@@ -1064,7 +1075,7 @@ public class Grants extends TestBase
 		assertThrows(AmazonServiceException.class, () -> altClient.putObject(bucketName, key2, "baroverwrite"));
 
 		var objects = getKeys(altClient.listObjects(bucketName).getObjectSummaries());
-		assertEquals(new ArrayList<>(Arrays.asList(new String[] { key2, key1 })), objects);
+		assertEquals(List.of(key2, key1), objects);
 		altClient.putObject(bucketName, newKey, "newcontent");
 	}
 }
