@@ -15,7 +15,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 
 import org.example.Data.MainData;
 import org.example.Utility.Utils;
@@ -35,57 +35,49 @@ import com.amazonaws.services.s3.model.ServerSideEncryptionRule;
 import com.amazonaws.services.s3.model.SetBucketEncryptionRequest;
 import com.amazonaws.services.s3.model.UploadPartRequest;
 
-public class SSE_S3 extends TestBase
-{
+public class SSE_S3 extends TestBase {
 	@org.junit.jupiter.api.BeforeAll
-	public static void beforeAll()
-	{
+	public static void beforeAll() {
 		System.out.println("SSE_S3 Start");
 	}
 
 	@org.junit.jupiter.api.AfterAll
-	public static void afterAll()
-	{
+	public static void afterAll() {
 		System.out.println("SSE_S3 End");
 	}
 
 	@Test
 	@Tag("PutGet")
-	//1Byte 오브젝트를 SSE-S3 설정하여 업/다운로드가 올바르게 동작하는지 확인
-	public void test_sse_s3_encrypted_transfer_1b()
-	{
-		testEncryptionSSE_S3CustomerWrite(1);
+	// 1Byte 오브젝트를 SSE-S3 설정하여 업/다운로드가 올바르게 동작하는지 확인
+	public void testSseS3EncryptedTransfer1b() {
+		testEncryptionSseS3CustomerWrite(1);
 	}
 
 	@Test
 	@Tag("PutGet")
-	//1KB 오브젝트를 SSE-S3 설정하여 업/다운로드가 올바르게 동작하는지 확인
-	public void test_sse_s3_encrypted_transfer_1kb()
-	{
-		testEncryptionSSE_S3CustomerWrite(1024);
+	// 1KB 오브젝트를 SSE-S3 설정하여 업/다운로드가 올바르게 동작하는지 확인
+	public void testSseS3EncryptedTransfer1kb() {
+		testEncryptionSseS3CustomerWrite(1024);
 	}
 
 	@Test
 	@Tag("PutGet")
-	//1MB 오브젝트를 SSE-S3 설정하여 업/다운로드가 올바르게 동작하는지 확인
-	public void test_sse_s3_encrypted_transfer_1MB()
-	{
-		testEncryptionSSE_S3CustomerWrite(1024 * 1024);
+	// 1MB 오브젝트를 SSE-S3 설정하여 업/다운로드가 올바르게 동작하는지 확인
+	public void testSseS3EncryptedTransfer1MB() {
+		testEncryptionSseS3CustomerWrite(1024 * 1024);
 	}
 
 	@Test
 	@Tag("PutGet")
-	//13Byte 오브젝트를 SSE-S3 설정하여 업/다운로드가 올바르게 동작하는지 확인
-	public void test_sse_s3_encrypted_transfer_13b()
-	{
-		testEncryptionSSE_S3CustomerWrite(13);
+	// 13Byte 오브젝트를 SSE-S3 설정하여 업/다운로드가 올바르게 동작하는지 확인
+	public void testSseS3EncryptedTransfer13b() {
+		testEncryptionSseS3CustomerWrite(13);
 	}
 
 	@Test
 	@Tag("Metadata")
-	//SSE-S3 설정하여 업로드한 오브젝트의 헤더정보읽기가 가능한지 확인
-	public void test_sse_s3_encryption_method_head()
-	{
+	// SSE-S3 설정하여 업로드한 오브젝트의 헤더정보읽기가 가능한지 확인
+	public void testSseS3EncryptionMethodHead() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 		var key = "obj";
@@ -104,12 +96,11 @@ public class SSE_S3 extends TestBase
 
 	@Test
 	@Tag("Multipart")
-	//멀티파트업로드를 SSE-S3 설정하여 업로드 가능 확인
-	public void test_sse_s3_encryption_multipart_upload()
-	{
+	// 멀티파트업로드를 SSE-S3 설정하여 업로드 가능 확인
+	public void testSseS3EncryptionMultipartUpload() {
 		var bucketName = getNewBucket();
 		var client = getClient();
-		var key = "multipart_enc";
+		var key = "multipartEnc";
 		var size = 50 * MainData.MB;
 		var contentType = "text/plain";
 		var metadata = new ObjectMetadata();
@@ -137,7 +128,7 @@ public class SSE_S3 extends TestBase
 		var headResponse = client.listObjectsV2(bucketName);
 		var objectCount = headResponse.getKeyCount();
 		assertEquals(1, objectCount);
-		var bytesUsed = GetBytesUsed(headResponse);
+		var bytesUsed = getBytesUsed(headResponse);
 		assertEquals(size, bytesUsed);
 
 		var getResponse = client.getObjectMetadata(bucketName, key);
@@ -146,15 +137,14 @@ public class SSE_S3 extends TestBase
 		assertEquals("AES256", getResponse.getSSEAlgorithm());
 
 		checkContentUsingRange(bucketName, key, data, MainData.MB);
-		checkContentUsingRange(bucketName, key, data, 10 * MainData.MB);
+		checkContentUsingRange(bucketName, key, data, 10L * MainData.MB);
 		checkContentUsingRandomRange(bucketName, key, data, 100);
 	}
 
 	@Test
 	@Tag("encryption")
-	//버킷의 SSE-S3 설정 확인
-	public void test_get_bucket_encryption()
-	{
+	// 버킷의 SSE-S3 설정 확인
+	public void testGetBucketEncryption() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 
@@ -164,34 +154,36 @@ public class SSE_S3 extends TestBase
 	@Test
 	@Tag("encryption")
 	@Tag("KSAN")
-	//버킷의 SSE-S3 설정이 가능한지 확인
-	public void test_put_bucket_encryption()
-	{
+	// 버킷의 SSE-S3 설정이 가능한지 확인
+	public void testPutBucketEncryption() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 
-		var SSE_S3Config = new ServerSideEncryptionConfiguration()
-			.withRules(new ServerSideEncryptionRule()
-			.withApplyServerSideEncryptionByDefault(new ServerSideEncryptionByDefault()
-			.withSSEAlgorithm(SSEAlgorithm.AES256)).withBucketKeyEnabled(false));
+		var sseS3Config = new ServerSideEncryptionConfiguration()
+				.withRules(new ServerSideEncryptionRule()
+						.withApplyServerSideEncryptionByDefault(new ServerSideEncryptionByDefault()
+								.withSSEAlgorithm(SSEAlgorithm.AES256))
+						.withBucketKeyEnabled(false));
 
-		client.setBucketEncryption(new SetBucketEncryptionRequest().withBucketName(bucketName).withServerSideEncryptionConfiguration(SSE_S3Config));
+		client.setBucketEncryption(new SetBucketEncryptionRequest().withBucketName(bucketName)
+				.withServerSideEncryptionConfiguration(sseS3Config));
 	}
 
 	@Test
 	@Tag("encryption")
-	//버킷의 SSE-S3 설정 삭제가 가능한지 확인
-	public void test_delete_bucket_encryption()
-	{
+	// 버킷의 SSE-S3 설정 삭제가 가능한지 확인
+	public void testDeleteBucketEncryption() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 
-		var SSE_S3Config = new ServerSideEncryptionConfiguration()
-			.withRules(new ServerSideEncryptionRule()
-			.withApplyServerSideEncryptionByDefault(new ServerSideEncryptionByDefault()
-			.withSSEAlgorithm(SSEAlgorithm.AES256)).withBucketKeyEnabled(false));
+		var sseS3Config = new ServerSideEncryptionConfiguration()
+				.withRules(new ServerSideEncryptionRule()
+						.withApplyServerSideEncryptionByDefault(new ServerSideEncryptionByDefault()
+								.withSSEAlgorithm(SSEAlgorithm.AES256))
+						.withBucketKeyEnabled(false));
 
-		client.setBucketEncryption(new SetBucketEncryptionRequest().withBucketName(bucketName).withServerSideEncryptionConfiguration(SSE_S3Config));
+		client.setBucketEncryption(new SetBucketEncryptionRequest().withBucketName(bucketName)
+				.withServerSideEncryptionConfiguration(sseS3Config));
 
 		var response = client.getBucketEncryption(bucketName);
 		assertEquals(1, response.getServerSideEncryptionConfiguration().getRules().size());
@@ -203,23 +195,24 @@ public class SSE_S3 extends TestBase
 
 	@Test
 	@Tag("encryption")
-	//버킷의 SSE-S3 설정이 오브젝트에 반영되는지 확인
-	public void test_put_bucket_encryption_and_object_set_check()
-	{
+	// 버킷의 SSE-S3 설정이 오브젝트에 반영되는지 확인
+	public void testPutBucketEncryptionAndObjectSetCheck() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 
-		var SSE_S3Config = new ServerSideEncryptionConfiguration()
-			.withRules(new ServerSideEncryptionRule()
-			.withApplyServerSideEncryptionByDefault(new ServerSideEncryptionByDefault()
-			.withSSEAlgorithm(SSEAlgorithm.AES256)).withBucketKeyEnabled(false));
+		var sseS3Config = new ServerSideEncryptionConfiguration()
+				.withRules(new ServerSideEncryptionRule()
+						.withApplyServerSideEncryptionByDefault(new ServerSideEncryptionByDefault()
+								.withSSEAlgorithm(SSEAlgorithm.AES256))
+						.withBucketKeyEnabled(false));
 
-		client.setBucketEncryption(new SetBucketEncryptionRequest().withBucketName(bucketName).withServerSideEncryptionConfiguration(SSE_S3Config));
+		client.setBucketEncryption(new SetBucketEncryptionRequest().withBucketName(bucketName)
+				.withServerSideEncryptionConfiguration(sseS3Config));
 
 		var response = client.getBucketEncryption(bucketName);
-		assertEquals(SSE_S3Config.getRules(), response.getServerSideEncryptionConfiguration().getRules());
+		assertEquals(sseS3Config.getRules(), response.getServerSideEncryptionConfiguration().getRules());
 
-		var keys = new ArrayList<>(Arrays.asList(new String[] { "for/bar", "test/" }));
+		var keys = List.of("for/bar", "test/");
 		createObjectsToBody(bucketName, keys, "");
 
 		var getHeadResponse = client.getObjectMetadata(bucketName, keys.get(1));
@@ -228,46 +221,44 @@ public class SSE_S3 extends TestBase
 
 	@Test
 	@Tag("CopyObject")
-	//버킷에 SSE-S3 설정하여 업로드한 1kb 오브젝트를 복사 가능한지 확인
-	public void test_copy_object_encryption_1kb()
-	{
-		testEncryptionSSE_S3Copy(1024);
+	// 버킷에 SSE-S3 설정하여 업로드한 1kb 오브젝트를 복사 가능한지 확인
+	public void testCopyObjectEncryption1kb() {
+		testEncryptionSseS3Copy(1024);
 	}
 
 	@Test
 	@Tag("CopyObject")
-	//버킷에 SSE-S3 설정하여 업로드한 256kb 오브젝트를 복사 가능한지 확인
-	public void test_copy_object_encryption_256kb()
-	{
-		testEncryptionSSE_S3Copy(256 * 1024);
+	// 버킷에 SSE-S3 설정하여 업로드한 256kb 오브젝트를 복사 가능한지 확인
+	public void testCopyObjectEncryption256kb() {
+		testEncryptionSseS3Copy(256 * 1024);
 	}
 
 	@Test
 	@Tag("CopyObject")
-	//버킷에 SSE-S3 설정하여 업로드한 1mb 오브젝트를 복사 가능한지 확인
-	public void test_copy_object_encryption_1mb()
-	{
-		testEncryptionSSE_S3Copy(1024 * 1024);
+	// 버킷에 SSE-S3 설정하여 업로드한 1mb 오브젝트를 복사 가능한지 확인
+	public void testCopyObjectEncryption1mb() {
+		testEncryptionSseS3Copy(1024 * 1024);
 	}
 
 	@Test
 	@Tag("PutGet")
-	//[버킷에 SSE-S3 설정] 업로드, 다운로드 성공 확인
-	public void test_sse_s3_bucket_put_get()
-	{
+	// [버킷에 SSE-S3 설정] 업로드, 다운로드 성공 확인
+	public void testSseS3BucketPutGet() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 		var data = Utils.randomTextToLong(1000);
 
-		var SSE_S3Config = new ServerSideEncryptionConfiguration()
-			.withRules(new ServerSideEncryptionRule()
-			.withApplyServerSideEncryptionByDefault(new ServerSideEncryptionByDefault()
-			.withSSEAlgorithm(SSEAlgorithm.AES256)).withBucketKeyEnabled(false));
+		var sseS3Config = new ServerSideEncryptionConfiguration()
+				.withRules(new ServerSideEncryptionRule()
+						.withApplyServerSideEncryptionByDefault(new ServerSideEncryptionByDefault()
+								.withSSEAlgorithm(SSEAlgorithm.AES256))
+						.withBucketKeyEnabled(false));
 
-		client.setBucketEncryption(new SetBucketEncryptionRequest().withBucketName(bucketName).withServerSideEncryptionConfiguration(SSE_S3Config));
+		client.setBucketEncryption(new SetBucketEncryptionRequest().withBucketName(bucketName)
+				.withServerSideEncryptionConfiguration(sseS3Config));
 
 		var response = client.getBucketEncryption(bucketName);
-		assertEquals(SSE_S3Config.getRules(), response.getServerSideEncryptionConfiguration().getRules());
+		assertEquals(sseS3Config.getRules(), response.getServerSideEncryptionConfiguration().getRules());
 
 		var key = "bar";
 		client.putObject(bucketName, key, data);
@@ -280,22 +271,23 @@ public class SSE_S3 extends TestBase
 
 	@Test
 	@Tag("PutGet")
-	//[버킷에 SSE-S3 설정, SignatureVersion4] 업로드, 다운로드 성공 확인
-	public void test_sse_s3_bucket_put_get_v4()
-	{
+	// [버킷에 SSE-S3 설정, SignatureVersion4] 업로드, 다운로드 성공 확인
+	public void testSseS3BucketPutGetV4() {
 		var bucketName = getNewBucket();
 		var client = getClientV4(true);
 		var data = Utils.randomTextToLong(1000);
 
-		var SSE_S3Config = new ServerSideEncryptionConfiguration()
-			.withRules(new ServerSideEncryptionRule()
-			.withApplyServerSideEncryptionByDefault(new ServerSideEncryptionByDefault()
-			.withSSEAlgorithm(SSEAlgorithm.AES256)).withBucketKeyEnabled(false));
+		var sseS3Config = new ServerSideEncryptionConfiguration()
+				.withRules(new ServerSideEncryptionRule()
+						.withApplyServerSideEncryptionByDefault(new ServerSideEncryptionByDefault()
+								.withSSEAlgorithm(SSEAlgorithm.AES256))
+						.withBucketKeyEnabled(false));
 
-		client.setBucketEncryption(new SetBucketEncryptionRequest().withBucketName(bucketName).withServerSideEncryptionConfiguration(SSE_S3Config));
+		client.setBucketEncryption(new SetBucketEncryptionRequest().withBucketName(bucketName)
+				.withServerSideEncryptionConfiguration(sseS3Config));
 
 		var response = client.getBucketEncryption(bucketName);
-		assertEquals(SSE_S3Config.getRules(), response.getServerSideEncryptionConfiguration().getRules());
+		assertEquals(sseS3Config.getRules(), response.getServerSideEncryptionConfiguration().getRules());
 
 		var key = "bar";
 		client.putObject(bucketName, key, data);
@@ -308,22 +300,23 @@ public class SSE_S3 extends TestBase
 
 	@Test
 	@Tag("PutGet")
-	//[버킷에 SSE-S3 설정, SignatureVersion4, UseChunkEncoding = true] 업로드, 다운로드 성공 확인
-	public void test_sse_s3_bucket_put_get_use_chunk_encoding()
-	{
+	// [버킷에 SSE-S3 설정, SignatureVersion4, UseChunkEncoding = true] 업로드, 다운로드 성공 확인
+	public void testSseS3BucketPutGetUseChunkEncoding() {
 		var bucketName = getNewBucket();
 		var client = getClientHttpsV4(true, false);
 		var data = Utils.randomTextToLong(1000);
 
-		var SSE_S3Config = new ServerSideEncryptionConfiguration()
-			.withRules(new ServerSideEncryptionRule()
-			.withApplyServerSideEncryptionByDefault(new ServerSideEncryptionByDefault()
-			.withSSEAlgorithm(SSEAlgorithm.AES256)).withBucketKeyEnabled(false));
+		var sseS3Config = new ServerSideEncryptionConfiguration()
+				.withRules(new ServerSideEncryptionRule()
+						.withApplyServerSideEncryptionByDefault(new ServerSideEncryptionByDefault()
+								.withSSEAlgorithm(SSEAlgorithm.AES256))
+						.withBucketKeyEnabled(false));
 
-		client.setBucketEncryption(new SetBucketEncryptionRequest().withBucketName(bucketName).withServerSideEncryptionConfiguration(SSE_S3Config));
+		client.setBucketEncryption(new SetBucketEncryptionRequest().withBucketName(bucketName)
+				.withServerSideEncryptionConfiguration(sseS3Config));
 
 		var response = client.getBucketEncryption(bucketName);
-		assertEquals(SSE_S3Config.getRules(), response.getServerSideEncryptionConfiguration().getRules());
+		assertEquals(sseS3Config.getRules(), response.getServerSideEncryptionConfiguration().getRules());
 
 		var key = "bar";
 		client.putObject(bucketName, key, data);
@@ -336,22 +329,24 @@ public class SSE_S3 extends TestBase
 
 	@Test
 	@Tag("PutGet")
-	//[버킷에 SSE-S3 설정, SignatureVersion4, UseChunkEncoding = true, DisablePayloadSigning = true] 업로드, 다운로드 성공 확인
-	public void test_sse_s3_bucket_put_get_use_chunk_encoding_and_disable_payload_signing()
-	{
+	// [버킷에 SSE-S3 설정, SignatureVersion4, UseChunkEncoding = true,
+	// DisablePayloadSigning = true] 업로드, 다운로드 성공 확인
+	public void testSseS3BucketPutGetUseChunkEncodingAndDisablePayloadSigning() {
 		var bucketName = getNewBucket();
 		var client = getClientHttpsV4(true, true);
 		var data = Utils.randomTextToLong(1000);
 
-		var SSE_S3Config = new ServerSideEncryptionConfiguration()
-			.withRules(new ServerSideEncryptionRule()
-			.withApplyServerSideEncryptionByDefault(new ServerSideEncryptionByDefault()
-			.withSSEAlgorithm(SSEAlgorithm.AES256)).withBucketKeyEnabled(false));
+		var sseS3Config = new ServerSideEncryptionConfiguration()
+				.withRules(new ServerSideEncryptionRule()
+						.withApplyServerSideEncryptionByDefault(new ServerSideEncryptionByDefault()
+								.withSSEAlgorithm(SSEAlgorithm.AES256))
+						.withBucketKeyEnabled(false));
 
-		client.setBucketEncryption(new SetBucketEncryptionRequest().withBucketName(bucketName).withServerSideEncryptionConfiguration(SSE_S3Config));
+		client.setBucketEncryption(new SetBucketEncryptionRequest().withBucketName(bucketName)
+				.withServerSideEncryptionConfiguration(sseS3Config));
 
 		var response = client.getBucketEncryption(bucketName);
-		assertEquals(SSE_S3Config.getRules(), response.getServerSideEncryptionConfiguration().getRules());
+		assertEquals(sseS3Config.getRules(), response.getServerSideEncryptionConfiguration().getRules());
 
 		var key = "bar";
 		client.putObject(bucketName, key, data);
@@ -364,22 +359,23 @@ public class SSE_S3 extends TestBase
 
 	@Test
 	@Tag("PutGet")
-	//[버킷에 SSE-S3 설정, SignatureVersion4, UseChunkEncoding = false] 업로드, 다운로드 성공 확인
-	public void test_sse_s3_bucket_put_get_not_chunk_encoding()
-	{
+	// [버킷에 SSE-S3 설정, SignatureVersion4, UseChunkEncoding = false] 업로드, 다운로드 성공 확인
+	public void testSseS3BucketPutGetNotChunkEncoding() {
 		var bucketName = getNewBucket();
 		var client = getClientHttpsV4(false, false);
 		var data = Utils.randomTextToLong(1000);
 
-		var SSE_S3Config = new ServerSideEncryptionConfiguration()
-			.withRules(new ServerSideEncryptionRule()
-			.withApplyServerSideEncryptionByDefault(new ServerSideEncryptionByDefault()
-			.withSSEAlgorithm(SSEAlgorithm.AES256)).withBucketKeyEnabled(false));
+		var sseS3Config = new ServerSideEncryptionConfiguration()
+				.withRules(new ServerSideEncryptionRule()
+						.withApplyServerSideEncryptionByDefault(new ServerSideEncryptionByDefault()
+								.withSSEAlgorithm(SSEAlgorithm.AES256))
+						.withBucketKeyEnabled(false));
 
-		client.setBucketEncryption(new SetBucketEncryptionRequest().withBucketName(bucketName).withServerSideEncryptionConfiguration(SSE_S3Config));
+		client.setBucketEncryption(new SetBucketEncryptionRequest().withBucketName(bucketName)
+				.withServerSideEncryptionConfiguration(sseS3Config));
 
 		var response = client.getBucketEncryption(bucketName);
-		assertEquals(SSE_S3Config.getRules(), response.getServerSideEncryptionConfiguration().getRules());
+		assertEquals(sseS3Config.getRules(), response.getServerSideEncryptionConfiguration().getRules());
 
 		var key = "bar";
 		client.putObject(bucketName, key, data);
@@ -392,22 +388,24 @@ public class SSE_S3 extends TestBase
 
 	@Test
 	@Tag("PutGet")
-	//[버킷에 SSE-S3 설정, SignatureVersion4, UseChunkEncoding = false, DisablePayloadSigning = true] 업로드, 다운로드 성공 확인
-	public void test_sse_s3_bucket_put_get_not_chunk_encoding_and_disable_payload_signing()
-	{
+	// [버킷에 SSE-S3 설정, SignatureVersion4, UseChunkEncoding = false,
+	// DisablePayloadSigning = true] 업로드, 다운로드 성공 확인
+	public void testSseS3BucketPutGetNotChunkEncodingAndDisablePayloadSigning() {
 		var bucketName = getNewBucket();
 		var client = getClientHttpsV4(false, true);
 		var data = Utils.randomTextToLong(1000);
 
-		var SSE_S3Config = new ServerSideEncryptionConfiguration()
-			.withRules(new ServerSideEncryptionRule()
-			.withApplyServerSideEncryptionByDefault(new ServerSideEncryptionByDefault()
-			.withSSEAlgorithm(SSEAlgorithm.AES256)).withBucketKeyEnabled(false));
+		var sseS3Config = new ServerSideEncryptionConfiguration()
+				.withRules(new ServerSideEncryptionRule()
+						.withApplyServerSideEncryptionByDefault(new ServerSideEncryptionByDefault()
+								.withSSEAlgorithm(SSEAlgorithm.AES256))
+						.withBucketKeyEnabled(false));
 
-		client.setBucketEncryption(new SetBucketEncryptionRequest().withBucketName(bucketName).withServerSideEncryptionConfiguration(SSE_S3Config));
+		client.setBucketEncryption(new SetBucketEncryptionRequest().withBucketName(bucketName)
+				.withServerSideEncryptionConfiguration(sseS3Config));
 
 		var response = client.getBucketEncryption(bucketName);
-		assertEquals(SSE_S3Config.getRules(), response.getServerSideEncryptionConfiguration().getRules());
+		assertEquals(sseS3Config.getRules(), response.getServerSideEncryptionConfiguration().getRules());
 
 		var key = "bar";
 		client.putObject(bucketName, key, data);
@@ -420,22 +418,23 @@ public class SSE_S3 extends TestBase
 
 	@Test
 	@Tag("PresignedURL")
-	//[버킷에 SSE-S3 설정]PresignedURL로 오브젝트 업로드, 다운로드 성공 확인
-	public void test_sse_s3_bucket_presigned_url_put_get()
-	{
+	// [버킷에 SSE-S3 설정]PresignedURL로 오브젝트 업로드, 다운로드 성공 확인
+	public void testSseS3BucketPresignedUrlPutGet() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 		var key = "foo";
 
-		var SSE_S3Config = new ServerSideEncryptionConfiguration()
-			.withRules(new ServerSideEncryptionRule()
-			.withApplyServerSideEncryptionByDefault(new ServerSideEncryptionByDefault()
-			.withSSEAlgorithm(SSEAlgorithm.AES256)).withBucketKeyEnabled(false));
+		var sseS3Config = new ServerSideEncryptionConfiguration()
+				.withRules(new ServerSideEncryptionRule()
+						.withApplyServerSideEncryptionByDefault(new ServerSideEncryptionByDefault()
+								.withSSEAlgorithm(SSEAlgorithm.AES256))
+						.withBucketKeyEnabled(false));
 
-		client.setBucketEncryption(new SetBucketEncryptionRequest().withBucketName(bucketName).withServerSideEncryptionConfiguration(SSE_S3Config));
+		client.setBucketEncryption(new SetBucketEncryptionRequest().withBucketName(bucketName)
+				.withServerSideEncryptionConfiguration(sseS3Config));
 
 		var response = client.getBucketEncryption(bucketName);
-		assertEquals(SSE_S3Config.getRules(), response.getServerSideEncryptionConfiguration().getRules());
+		assertEquals(sseS3Config.getRules(), response.getServerSideEncryptionConfiguration().getRules());
 
 		var putURL = client.generatePresignedUrl(bucketName, key, getTimeToAddSeconds(100000), HttpMethod.PUT);
 		var putResponse = putObject(putURL, key);
@@ -449,22 +448,23 @@ public class SSE_S3 extends TestBase
 
 	@Test
 	@Tag("PresignedURL")
-	//[버킷에 SSE-S3 설정, SignatureVersion4]PresignedURL로 오브젝트 업로드, 다운로드 성공 확인
-	public void test_sse_s3_bucket_presigned_url_put_get_v4()
-	{
+	// [버킷에 SSE-S3 설정, SignatureVersion4]PresignedURL로 오브젝트 업로드, 다운로드 성공 확인
+	public void testSseS3BucketPresignedUrlPutGetV4() {
 		var bucketName = getNewBucket();
 		var client = getClientV4(true);
 		var key = "foo";
 
-		var SSE_S3Config = new ServerSideEncryptionConfiguration()
-			.withRules(new ServerSideEncryptionRule()
-			.withApplyServerSideEncryptionByDefault(new ServerSideEncryptionByDefault()
-			.withSSEAlgorithm(SSEAlgorithm.AES256)).withBucketKeyEnabled(false));
+		var sseS3Config = new ServerSideEncryptionConfiguration()
+				.withRules(new ServerSideEncryptionRule()
+						.withApplyServerSideEncryptionByDefault(new ServerSideEncryptionByDefault()
+								.withSSEAlgorithm(SSEAlgorithm.AES256))
+						.withBucketKeyEnabled(false));
 
-		client.setBucketEncryption(new SetBucketEncryptionRequest().withBucketName(bucketName).withServerSideEncryptionConfiguration(SSE_S3Config));
+		client.setBucketEncryption(new SetBucketEncryptionRequest().withBucketName(bucketName)
+				.withServerSideEncryptionConfiguration(sseS3Config));
 
 		var response = client.getBucketEncryption(bucketName);
-		assertEquals(SSE_S3Config.getRules(), response.getServerSideEncryptionConfiguration().getRules());
+		assertEquals(sseS3Config.getRules(), response.getServerSideEncryptionConfiguration().getRules());
 
 		var putURL = client.generatePresignedUrl(bucketName, key, getTimeToAddSeconds(100000), HttpMethod.PUT);
 		var putResponse = putObject(putURL, key);
@@ -477,20 +477,21 @@ public class SSE_S3 extends TestBase
 
 	@Test
 	@Tag("Get")
-	//SSE-S3설정한 오브젝트를 여러번 반복하여 다운로드 성공 확인
-	public void test_sse_s3_get_object_many()
-	{
+	// SSE-S3설정한 오브젝트를 여러번 반복하여 다운로드 성공 확인
+	public void testSseS3GetObjectMany() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 		var key = "foo";
 		var data = Utils.randomTextToLong(15 * MainData.MB);
 
-		var SSE_S3Config = new ServerSideEncryptionConfiguration()
-			.withRules(new ServerSideEncryptionRule()
-			.withApplyServerSideEncryptionByDefault(new ServerSideEncryptionByDefault()
-			.withSSEAlgorithm(SSEAlgorithm.AES256)).withBucketKeyEnabled(false));
+		var sseS3Config = new ServerSideEncryptionConfiguration()
+				.withRules(new ServerSideEncryptionRule()
+						.withApplyServerSideEncryptionByDefault(new ServerSideEncryptionByDefault()
+								.withSSEAlgorithm(SSEAlgorithm.AES256))
+						.withBucketKeyEnabled(false));
 
-		client.setBucketEncryption(new SetBucketEncryptionRequest().withBucketName(bucketName).withServerSideEncryptionConfiguration(SSE_S3Config));
+		client.setBucketEncryption(new SetBucketEncryptionRequest().withBucketName(bucketName)
+				.withServerSideEncryptionConfiguration(sseS3Config));
 
 		client.putObject(bucketName, key, data);
 		checkContent(bucketName, key, data, 50);
@@ -498,21 +499,22 @@ public class SSE_S3 extends TestBase
 
 	@Test
 	@Tag("Get")
-	//SSE-S3설정한 오브젝트를 여러번 반복하여 Range 다운로드 성공 확인
-	public void test_sse_s3_range_object_many()
-	{
+	// SSE-S3설정한 오브젝트를 여러번 반복하여 Range 다운로드 성공 확인
+	public void testSseS3RangeObjectMany() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 		var key = "foo";
 		var size = 15 * 1024 * 1024;
 		var data = Utils.randomTextToLong(size);
 
-		var SSE_S3Config = new ServerSideEncryptionConfiguration()
-			.withRules(new ServerSideEncryptionRule()
-			.withApplyServerSideEncryptionByDefault(new ServerSideEncryptionByDefault()
-			.withSSEAlgorithm(SSEAlgorithm.AES256)).withBucketKeyEnabled(false));
+		var sseS3Config = new ServerSideEncryptionConfiguration()
+				.withRules(new ServerSideEncryptionRule()
+						.withApplyServerSideEncryptionByDefault(new ServerSideEncryptionByDefault()
+								.withSSEAlgorithm(SSEAlgorithm.AES256))
+						.withBucketKeyEnabled(false));
 
-		client.setBucketEncryption(new SetBucketEncryptionRequest().withBucketName(bucketName).withServerSideEncryptionConfiguration(SSE_S3Config));
+		client.setBucketEncryption(new SetBucketEncryptionRequest().withBucketName(bucketName)
+				.withServerSideEncryptionConfiguration(sseS3Config));
 
 		client.putObject(bucketName, key, data);
 		checkContentUsingRandomRange(bucketName, key, data, 100);
@@ -520,12 +522,11 @@ public class SSE_S3 extends TestBase
 
 	@Test
 	@Tag("Multipart")
-	//SSE-S3 설정하여 멀티파트로 업로드한 오브젝트를 mulitcopy 로 복사 가능한지 확인
-	public void test_sse_s3_encryption_multipart_copypart_upload()
-	{
+	// SSE-S3 설정하여 멀티파트로 업로드한 오브젝트를 multipart copy 로 복사 가능한지 확인
+	public void testSseS3EncryptionMultipartCopyPartUpload() {
 		var bucketName = getNewBucket();
 		var client = getClient();
-		var sourceKey = "multipart_enc";
+		var sourceKey = "multipartEnc";
 		var size = 50 * MainData.MB;
 		var contentType = "text/plain";
 		var metadata = new ObjectMetadata();
@@ -535,13 +536,14 @@ public class SSE_S3 extends TestBase
 
 		// 멀티파트 업로드
 		var uploadData = setupMultipartUpload(client, bucketName, sourceKey, size, metadata);
-		client.completeMultipartUpload(new CompleteMultipartUploadRequest(bucketName, sourceKey, uploadData.uploadId, uploadData.parts));
+		client.completeMultipartUpload(
+				new CompleteMultipartUploadRequest(bucketName, sourceKey, uploadData.uploadId, uploadData.parts));
 
-		//올바르게 업로드 되었는지 확인
+		// 올바르게 업로드 되었는지 확인
 		var headResponse = client.listObjectsV2(bucketName);
 		var objectCount = headResponse.getKeyCount();
 		assertEquals(1, objectCount);
-		var bytesUsed = GetBytesUsed(headResponse);
+		var bytesUsed = getBytesUsed(headResponse);
 		assertEquals(size, bytesUsed);
 
 		var getResponse = client.getObjectMetadata(bucketName, sourceKey);
@@ -552,22 +554,22 @@ public class SSE_S3 extends TestBase
 		checkContentUsingRange(bucketName, sourceKey, uploadData.getBody(), MainData.MB);
 
 		// 멀티파트 복사
-		var targetKey = "multipart_enc_copy";
+		var targetKey = "multipartEncCopy";
 		uploadData = multipartCopy(client, bucketName, sourceKey, bucketName, targetKey, size, metadata);
-		client.completeMultipartUpload(new CompleteMultipartUploadRequest(bucketName, targetKey, uploadData.uploadId, uploadData.parts));
+		client.completeMultipartUpload(
+				new CompleteMultipartUploadRequest(bucketName, targetKey, uploadData.uploadId, uploadData.parts));
 
-		//올바르게 복사 되었는지 확인
+		// 올바르게 복사 되었는지 확인
 		checkCopyContentUsingRange(bucketName, sourceKey, bucketName, targetKey, MainData.MB);
 	}
 
 	@Test
 	@Tag("Multipart")
-	//SSE-S3 설정하여 Multipart와 Copypart를 모두 사용하여 오브젝트가 업로드 가능한지 확인
-	public void test_sse_s3_encryption_multipart_copy_many()
-	{
+	// SSE-S3 설정하여 Multipart와 Copy part를 모두 사용하여 오브젝트가 업로드 가능한지 확인
+	public void testSseS3EncryptionMultipartCopyMany() {
 		var bucketName = getNewBucket();
 		var client = getClient();
-		var sourceKey = "multipart_enc";
+		var sourceKey = "multipartEnc";
 		var size = 10 * MainData.MB;
 		var contentType = "text/plain";
 		var metadata = new ObjectMetadata();
@@ -577,48 +579,50 @@ public class SSE_S3 extends TestBase
 
 		// 멀티파트 업로드
 		var uploadData = setupMultipartUpload(client, bucketName, sourceKey, size, metadata);
-		client.completeMultipartUpload(new CompleteMultipartUploadRequest(bucketName, sourceKey, uploadData.uploadId, uploadData.parts));
+		client.completeMultipartUpload(
+				new CompleteMultipartUploadRequest(bucketName, sourceKey, uploadData.uploadId, uploadData.parts));
 
 		// 업로드가 올바르게 되었는지 확인
 		body.append(uploadData.body);
 		checkContentUsingRange(bucketName, sourceKey, body.toString(), MainData.MB);
 
 		// 멀티파트 카피
-		var TargetKey1 = "mymultipart1";
-		uploadData = multipartCopy(client, bucketName, sourceKey, bucketName, TargetKey1, size, metadata);
+		var targetKey1 = "my_multipart1";
+		uploadData = multipartCopy(client, bucketName, sourceKey, bucketName, targetKey1, size, metadata);
 		// 추가파츠 업로드
-		uploadData = multipartUpload(client, bucketName, TargetKey1, size, uploadData);
-		client.completeMultipartUpload(new CompleteMultipartUploadRequest(bucketName, TargetKey1, uploadData.uploadId, uploadData.parts));
+		uploadData = multipartUpload(client, bucketName, targetKey1, size, uploadData);
+		client.completeMultipartUpload(
+				new CompleteMultipartUploadRequest(bucketName, targetKey1, uploadData.uploadId, uploadData.parts));
 
 		// 업로드가 올바르게 되었는지 확인
 		body.append(uploadData.body);
-		checkContentUsingRange(bucketName, TargetKey1, body.toString(), MainData.MB);
+		checkContentUsingRange(bucketName, targetKey1, body.toString(), MainData.MB);
 
 		// 멀티파트 카피
-		var TargetKey2 = "mymultipart2";
-		uploadData = multipartCopy(client, bucketName, TargetKey1, bucketName, TargetKey2, size * 2, metadata);
+		var targetKey2 = "my_multipart2";
+		uploadData = multipartCopy(client, bucketName, targetKey1, bucketName, targetKey2, size * 2, metadata);
 		// 추가파츠 업로드
-		uploadData = multipartUpload(client, bucketName, TargetKey2, size, uploadData);
-		client.completeMultipartUpload(new CompleteMultipartUploadRequest(bucketName, TargetKey2, uploadData.uploadId, uploadData.parts));
+		uploadData = multipartUpload(client, bucketName, targetKey2, size, uploadData);
+		client.completeMultipartUpload(
+				new CompleteMultipartUploadRequest(bucketName, targetKey2, uploadData.uploadId, uploadData.parts));
 
 		// 업로드가 올바르게 되었는지 확인
 		body.append(uploadData.body);
-		checkContentUsingRange(bucketName, TargetKey2, body.toString(), MainData.MB);
+		checkContentUsingRange(bucketName, targetKey2, body.toString(), MainData.MB);
 	}
-	
+
 	@Test
 	@Tag("Retroactive")
-	//sse-s3설정은 소급적용 되지 않음을 확인
-	public void test_sse_s3_not_retroactive()
-	{
+	// sse-s3설정은 소급적용 되지 않음을 확인
+	public void testSseS3NotRetroactive() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 		var data = Utils.randomTextToLong(1000);
-		
+
 		var putKey = "put";
 		var copyKey = "copy";
 		var multiKey = "multi";
-		
+
 		// 일반 파일 업로드
 		client.putObject(bucketName, putKey, data);
 
@@ -627,21 +631,24 @@ public class SSE_S3 extends TestBase
 
 		// 멀티파트 업로드
 		var uploadData = setupMultipartUpload(client, bucketName, multiKey, 5 * MainData.MB, null);
-		client.completeMultipartUpload(new CompleteMultipartUploadRequest(bucketName, multiKey, uploadData.uploadId, uploadData.parts));
+		client.completeMultipartUpload(
+				new CompleteMultipartUploadRequest(bucketName, multiKey, uploadData.uploadId, uploadData.parts));
 
-		//SSE-S3 설정
+		// SSE-S3 설정
 		var sseS3Config = new ServerSideEncryptionConfiguration()
-			.withRules(new ServerSideEncryptionRule()
-			.withApplyServerSideEncryptionByDefault(new ServerSideEncryptionByDefault()
-			.withSSEAlgorithm(SSEAlgorithm.AES256)).withBucketKeyEnabled(false));
+				.withRules(new ServerSideEncryptionRule()
+						.withApplyServerSideEncryptionByDefault(new ServerSideEncryptionByDefault()
+								.withSSEAlgorithm(SSEAlgorithm.AES256))
+						.withBucketKeyEnabled(false));
 
-		client.setBucketEncryption(new SetBucketEncryptionRequest().withBucketName(bucketName).withServerSideEncryptionConfiguration(sseS3Config));
+		client.setBucketEncryption(new SetBucketEncryptionRequest().withBucketName(bucketName)
+				.withServerSideEncryptionConfiguration(sseS3Config));
 
-		//SSE-S3 설정이 올바르게 되었는지 확인
+		// SSE-S3 설정이 올바르게 되었는지 확인
 		var response = client.getBucketEncryption(bucketName);
 		assertEquals(sseS3Config.getRules(), response.getServerSideEncryptionConfiguration().getRules());
 
-		//SSE-S3 설정이 적용되지 않은 파일들이 올바르게 복사되었는지 확인
+		// SSE-S3 설정이 적용되지 않은 파일들이 올바르게 복사되었는지 확인
 		var getResponse = client.getObject(bucketName, putKey);
 		var body = getBody(getResponse.getObjectContent());
 		assertTrue(data.equals(body), MainData.NOT_MATCHED);
@@ -651,19 +658,20 @@ public class SSE_S3 extends TestBase
 		assertTrue(data.equals(body), MainData.NOT_MATCHED);
 
 		checkContentUsingRange(bucketName, multiKey, uploadData.body.toString(), MainData.MB);
-		
+
 		var putKey2 = "put2";
 		var copyKey2 = "copy2";
 		var multiKey2 = "multi2";
 		var data2 = Utils.randomTextToLong(1000);
 		client.putObject(bucketName, putKey2, data2);
-		
+
 		// 일반 파일 복사
 		client.copyObject(bucketName, putKey, bucketName, copyKey2);
 
 		// 멀티파트 업로드
 		var uploadData2 = setupMultipartUpload(client, bucketName, multiKey2, 5 * MainData.MB, null);
-		client.completeMultipartUpload(new CompleteMultipartUploadRequest(bucketName, multiKey2, uploadData2.uploadId, uploadData2.parts));
+		client.completeMultipartUpload(
+				new CompleteMultipartUploadRequest(bucketName, multiKey2, uploadData2.uploadId, uploadData2.parts));
 
 		client.deleteBucketEncryption(bucketName);
 
